----------------------------------------------
                 TeamTalk
----------------------------------------------
Version 5.7, unreleased
Accessible Windows Client:
- Specific TTS events when sending a private or channel message

Version 5.6.3, 2020/09/20
Accessible Windows Client:
- Fixed crash issue due to changes in translations
- Gender emoji only shown for female
Default QT Client:
- Gender emoji only shown for female

Version 5.6.2, 2020/09/13
Default QT Client:
- Fixed broken accessibility on macOS due to Qt 5.14 (now Qt 5.15.0)

Version 5.6.1, 2020/09/12
Accessible Windows Client:
- Fixed translation for development of WebM VP8 codec on about dialog
- Update window title at login with server name
- It's now possible to use numpad keys for subscriptions shortcuts
- Status mode is now displayed for Away, Question, Streaming media file and Webcam
- Away is displayed when switching automatically to Away-mode due to inactivity, and also when manually switching to this mode
- Status mode is now displayed as text in tree control
- Status message is now displayed after a hyphen (same behavior with QT Client)
- Fixed accessible hints on channel list and files-tab
- Ctrl+G now return "Administrator" when it's the case
- Ctrl+H/Y and Ctrl+Shift+H/Y to increase/decrease voice and media files volume of an user
- Ctrl+Shift+E to send a broadcast message
- Ctrl+Alt+B to kick and ban
- Ctrl+Shift+Alt+M to mute/unmute media files of an user
- Text message's timestamp now also include dates
- Text message's timestamp is now translatable
- New TTS option to enable messages from menu actions (move users, change volume...)
- Fixed TTS message when join/left root channel
- Contributors area on about dialog
- User volume levels and subscriptions are restored on login when using BearWare.dk Web Login
Default QT Client:
- Update window title at login with server name
- Status mode for Away, Question, Streaming media file and Webcam is now displayed as text 