@@ -42,6 +42,7 @@ public:
     ChannelDlg(ChannelDlgType type, const Channel& chan, QWidget * parent = 0);
 
     Channel GetChannel() const;
+    bool joinChannel() const;
 private slots:
     void slotAudioCodecChanged(int index);
     void slotUpdateSliderLabels();
